[gd_scene load_steps=3 format=3 uid="uid://igqaxb1151nr"]

[ext_resource type="Script" path="res://Scripts/View/Chiper_Radio_View.gd" id="1_47xw0"]
[ext_resource type="PackedScene" uid="uid://dkyj1sni68h8p" path="res://Scenes/Components/Keyboard.tscn" id="2_l532j"]

[node name="ChiperRadioView" type="Node2D"]
script = ExtResource("1_47xw0")

[node name="View" type="Camera2D" parent="."]

[node name="Chiper_Display" type="RichTextLabel" parent="."]
offset_left = -244.0
offset_top = -205.0
offset_right = 246.0
offset_bottom = -5.0
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
fit_content = true

[node name="Timeout_Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Charachter_Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Keyboard" parent="." instance=ExtResource("2_l532j")]
offset_left = -5.0
offset_top = -123.0
offset_right = 42.0
offset_bottom = -79.0

[node name="Back" type="Button" parent="."]
offset_left = -536.0
offset_top = -287.0
offset_right = -382.0
offset_bottom = -256.0
text = "Back to main View!"

[node name="RuleBook_Button" type="Button" parent="."]
offset_left = -561.0
offset_top = 274.0
offset_right = -480.0
offset_bottom = 305.0
text = "Rulebook"
